@@ -83,6 +83,7 @@ The <fixedpre>&where</fixedpre> property will be ignored because it interferes w
   <li><fixedpre>&noData</fixedpre> - (string) String to show if search comes up empty</li>
   <li><fixedpre>&cssFile</fixedpre> - (string) Path to CSS file; use `0` for no CSS file</li>
   <li><fixedpre>&useJS</fixedpre> - (boolean) Use JavaScript to hide results until a letter is clicked on</li>
+    <li><fixedpre>&element</fixedpre> - (string) Snippet to use; defaults to getResources</li>
 </ul>
 <p>All other properties are those of <a href="http://rtfm.modx
 .com/display/ADDON/getResources#getResources-AvailableProperties">getResources</a>. They should all work as they do for getResources with two exceptions:</p>
