@@ -4,6 +4,8 @@ Version 1.1.0
 -------------
 Add option to have no CSS file (thanks to Jako)
 Add option to use TV for title search (thanks to Jako)
+Add option to use snippets other than getResources (thanks to Jako)
+
 
 
 Version 1.0.3
